@@ -593,7 +593,7 @@ void load_configuration(const char *filename) {
   
   error = NULL;
   if (!g_file_get_contents(filename, &text, &length, &error)) {
-    g_warning("Could not load theme: %s", error->message);
+    g_warning("Could not load configuration: %s", error->message);
     exit(1);
   }
   /* Sanity check */
